--- a/PdfManualReader/PdfManualReader.csproj
+++ b/PdfManualReader/PdfManualReader.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.1-preview.1.24570.5" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Qdrant" Version="1.30.0-preview" />
     <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.30.0" />
     <PackageReference Include="PdfPig" Version="0.1.9" />
+    <PackageReference Include="Polly" Version="8.5.0" />
     <PackageReference Include="SmartComponents.LocalEmbeddings" Version="0.1.0-preview10148" />
     <PackageReference Include="SmartComponents.LocalEmbeddings.SemanticKernel" Version="0.1.0-preview10148" />
   </ItemGroup>
